test/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: react-ui-demo-service
spec:
  ports:
    - port: 80
      targetPort: 80
  selector:
    app: react-ui-demo
